--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -5,7 +5,7 @@
             android:shape="rectangle"   >
 
         <solid
-                android:color="#E7DFDF" >
+                android:color="#FCFBF7" >
         </solid>
 
         <stroke
