--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -70,7 +70,7 @@
             android:layout_marginTop="12dp"
             android:singleLine="true"
             android:inputType="phone"
-            android:hint="Enter Phoen Number"
+            android:hint="Enter Phone Number"
             android:layout_weight="1"
             android:fontFamily="casual"/>
 
