--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -1,99 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="match_parent"
-        android:padding="5dp"
-        android:layout_weight="10"
-        tools:context=".ui.UploadActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+                  name="viewmodel"
+                  type="com.renzam.shelf.data.ViewModel"/>
 
-    <TextView
-            android:text="Data Uploading"
+    </data>
+    <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:id="@+id/textView2"
-            android:textColor="#161313"
-            android:textSize="30sp"
-            android:gravity="center"
-            android:layout_height="0dp"
-            android:fontFamily="sans-serif-smallcaps"/>
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:padding="5dp"
+            android:layout_weight="10"
+            tools:context=".ui.UploadActivity">
 
-    <Spinner
-            android:layout_marginTop="12dp"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:id="@+id/spinner"
-            android:background="@drawable/shape"
-            android:layout_weight="1"/>
-    <EditText
+        <TextView
+                android:text="Data Uploading"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/textView2"
+                android:textColor="#161313"
+                android:textSize="30sp"
+                android:gravity="center"
+                android:layout_height="0dp"
+                android:fontFamily="sans-serif-smallcaps"/>
 
-            android:id="@+id/bussinessnameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/shape"
-            android:singleLine="true"
-            android:nextFocusDown="@+id/placenameEditText"
-            android:hint="Enter Bussiness Name"
-            android:layout_weight="1"
-            android:fontFamily="casual"/>
-    <EditText
+        <Spinner
+                android:layout_marginTop="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:id="@+id/spinner"
+                android:background="@drawable/shape"
+                android:layout_weight="1"/>
+        <EditText
 
-            android:id="@+id/placenameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="12dp"
-            android:background="@drawable/shape"
-            android:singleLine="true"
-            android:nextFocusDown="@+id/ownerNameEditText"
-            android:hint="Enter Place Name"
-            android:layout_weight="1"
-            android:fontFamily="casual"/>
-    <EditText
-            android:id="@+id/ownerNameEditText"
-            android:layout_width="match_parent"
-            android:nextFocusDown="@+id/ownerPhoneEditText"
-            android:layout_marginTop="12dp"
-            android:singleLine="true"
-            android:layout_height="0dp"
-            android:background="@drawable/shape"
-            android:hint="Enter Owner Name"
-            android:layout_weight="1"
-            android:fontFamily="casual"/>
-    <EditText
-            android:id="@+id/ownerPhoneEditText"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/shape"
-            android:layout_marginTop="12dp"
-            android:singleLine="true"
-            android:inputType="phone"
-            android:hint="Enter Phone Number"
-            android:layout_weight="1"
-            android:fontFamily="casual"/>
+                android:id="@+id/bussinessnameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/shape"
+                android:singleLine="true"
+                android:text="@={viewmodel.bussinessName}"
+                android:nextFocusDown="@+id/placenameEditText"
+                android:hint="Enter Bussiness Name"
+                android:layout_weight="1"
+                android:fontFamily="casual"/>
+        <EditText
 
-    <ImageView
-               android:id="@+id/uploadImageView"
-               android:layout_width="match_parent"
-               android:layout_height="0dp"
-               android:layout_marginTop="12dp"
-               android:background="@drawable/shape"
-               android:layout_weight="3"/>
+                android:id="@+id/placenameEditText"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/shape"
+                android:singleLine="true"
+                android:text="@={viewmodel.placeName}"
+                android:nextFocusDown="@+id/ownerNameEditText"
+                android:hint="Enter Place Name"
+                android:layout_weight="1"
+                android:fontFamily="casual"/>
+        <EditText
+                android:id="@+id/ownerNameEditText"
+                android:layout_width="match_parent"
+                android:nextFocusDown="@+id/ownerPhoneEditText"
+                android:layout_marginTop="12dp"
+                android:singleLine="true"
+                android:layout_height="0dp"
+                android:background="@drawable/shape"
+                android:text="@={viewmodel.ownerName}"
+                android:hint="Enter Owner Name"
+                android:layout_weight="1"
+                android:fontFamily="casual"/>
+        <EditText
+                android:id="@+id/ownerPhoneEditText"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:text="@={viewmodel.ownerPhoneNumber}"
+                android:background="@drawable/shape"
+                android:layout_marginTop="12dp"
+                android:singleLine="true"
+                android:inputType="phone"
+                android:hint="Enter Phone Number"
+                android:layout_weight="1"
+                android:fontFamily="casual"/>
+
+        <ImageView
+                android:id="@+id/uploadImageView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="12dp"
+                android:background="@drawable/shape"
+                android:layout_weight="3"/>
 
 
-    <Button
-            android:id="@+id/uploadButton"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:background="@drawable/shape"
-            android:layout_marginTop="12dp"
-            android:text="Upload Datas"
-            android:fontFamily="casual"
-            android:textAllCaps="false"
-            android:textSize="20sp"
-            android:layout_weight="1"/>
+        <Button
+                android:id="@+id/uploadButton"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:background="@drawable/shape"
+                android:layout_marginTop="12dp"
+                android:onClick="@{() -> viewmodel.getDatas()}"
+                android:text="Upload Datas"
+                android:fontFamily="casual"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                android:layout_weight="1"/>
 
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
