--- a/app/src/main/res/menu/menulog.xml
+++ b/app/src/main/res/menu/menulog.xml
@@ -4,5 +4,7 @@
           android:id="@+id/logout"/>
     <item android:title="deleteAccount"
           android:id="@+id/delete_Account"/>
+    <item android:title="My Uploads"
+          android:id="@+id/myUploads"/>
 
 </menu>
