--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -6,6 +6,7 @@
                   type="com.renzam.shelf.data.ViewModel"/>
 
     </data>
+
     <LinearLayout
             android:layout_width="match_parent"
             android:orientation="vertical"
@@ -79,6 +80,7 @@
                 android:layout_marginTop="12dp"
                 android:singleLine="true"
                 android:inputType="phone"
+                android:maxLength="10"
                 android:hint="Enter Phone Number"
                 android:layout_weight="1"
                 android:fontFamily="casual"/>
@@ -87,6 +89,7 @@
                 android:id="@+id/uploadImageView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:src="@drawable/noimage"
                 android:layout_marginTop="12dp"
                 android:background="@drawable/shape"
                 android:layout_weight="3"/>
