--- a/app/src/main/res/layout/activity_document_manager.xml
+++ b/app/src/main/res/layout/activity_document_manager.xml
@@ -1,120 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:padding="10dp"
-        android:layout_height="match_parent"
-        tools:context=".ui.DocumentManager">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
 
-    <ImageView
-            android:layout_width="0dp"
-            android:layout_height="180dp"
-            app:srcCompat="@drawable/noimage"
-            android:id="@+id/imageViewIm"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="40dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
-    <Spinner
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/catpgoryEt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="32dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewIm"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:hint="BusinessName"
-            android:id="@+id/businessNameEt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/catpgoryEt"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:id="@+id/placeNameEt"
-            android:hint="Place Name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/businessNameEt"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:ems="10"
-            android:hint="OwnerName"
-            android:id="@+id/ownerNameEt"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/placeNameEt"/>
-    <EditText
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:ems="10"
-            android:hint="Phone Number"
-            android:id="@+id/phoneNumberEt"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@+id/ownerNameEt"/>
-    <Button
-            android:text="Edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/editFieldBtn"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEt"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="70dp"
-            android:background="@drawable/shape"
-            android:textAllCaps="false"
-            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
-            android:layout_marginEnd="109dp"
-            android:layout_marginBottom="33dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
-            android:text="Delete"
-            android:textAllCaps="false"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/deleteBtn"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEt"
-            android:layout_marginStart="109dp"
-            android:background="@drawable/shape"
-            app:layout_constraintStart_toEndOf="@+id/editFieldBtn"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="70dp"
-            android:layout_marginBottom="33dp"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-    <Button
-            android:text="map"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/showMapBtn"
-            android:textAllCaps="false"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/shape"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberEt"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="33dp"
-            app:layout_constraintStart_toEndOf="@+id/editFieldBtn"
-            android:layout_marginStart="53dp"
-            app:layout_constraintEnd_toStartOf="@+id/deleteBtn"
-            android:layout_marginEnd="53dp"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </data>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:weightSum="4"
+            android:orientation="vertical">
+        <ScrollView
+                android:id="@+id/scrollView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:padding="5dp"
+                android:layout_weight="4"
+                tools:context=".ui.UploadActivity">
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
+                    tools:context=".ui.UploadActivity">
+
+                <ImageView
+                        android:id="@+id/imageViewIm"
+                        android:layout_width="match_parent"
+                        android:layout_height="250dp"
+                        android:src="@drawable/noimage"
+                        android:layout_marginTop="35dp"
+                        android:background="@drawable/shape"/>
+                <Spinner
+                        android:layout_marginTop="8dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:id="@+id/catpgoryEt"/>
+
+
+                <EditText
+                        android:id="@+id/businessNameEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:singleLine="true"
+                        android:nextFocusDown="@+id/placenameEditText"
+                        android:backgroundTint="#11161A"
+                        android:hint="Enter Business Name"
+                        android:fontFamily="casual">
+
+                </EditText>
+                <EditText
+
+                        android:id="@+id/placeNameEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:backgroundTint="#11161A"
+                        android:singleLine="true"
+                        android:nextFocusDown="@+id/ownerNameEditText"
+                        android:hint="Enter Place Name"
+                        android:fontFamily="casual"/>
+                <EditText
+                        android:id="@+id/ownerNameEt"
+                        android:layout_width="match_parent"
+                        android:nextFocusDown="@+id/ownerPhoneEditText"
+                        android:layout_marginTop="10dp"
+                        android:singleLine="true"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="#11161A"
+                        android:hint="Enter Owner Name"
+                        android:fontFamily="casual"/>
+                <EditText
+                        android:id="@+id/phoneNumberEt"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:singleLine="true"
+                        android:backgroundTint="#11161A"
+                        android:inputType="phone"
+                        android:maxLength="10"
+                        android:hint="Enter Phone Number"
+                        android:fontFamily="casual"/>
+                <LinearLayout android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:layout_gravity="center"
+                              android:orientation="horizontal">
+                    <Button
+                    android:text="Update"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editFieldBtn"
+                    android:background="@drawable/shape"
+                    android:layout_marginLeft="100dp"
+                    android:textAllCaps="false"
+                    android:layout_marginTop="24dp"/>
+                    <Button
+                    android:text="Delete"
+                    android:textAllCaps="false"
+                    android:layout_marginLeft="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/deleteBtn"
+                    android:background="@drawable/shape"
+                    android:layout_marginTop="24dp"/>
+
+
+                </LinearLayout>
+
+
+
+            </LinearLayout>
+
+        </ScrollView>
+
+
+    </LinearLayout>
+</layout>
