--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
             android:text="Welcome To Shelf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView"
+            android:id="@+id/listBusinessName"
             android:layout_marginTop="350dp"
             android:textColor="#E7DFDF"
             android:gravity="center"
