--- a/app/src/main/res/layout/activity_my_upload.xml
+++ b/app/src/main/res/layout/activity_my_upload.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,12 +7,25 @@
         android:orientation="vertical"
         android:padding="8dp"
         android:layout_height="match_parent"
-        android:background="#333435"
+        android:background="#DFEBE5E5"
         tools:context=".ui.MyUploadActivity">
 
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycleView"/>
-</LinearLayout>
+            android:id="@+id/recycleView"
+            tools:listitem="@layout/recycler_new_listing"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|right"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_add"
+            android:id="@+id/floatingActonButtton"
+            android:clickable="true"
+            app:layout_anchor="@id/recycleView"
+            app:layout_anchorGravity="bottom|right|end" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
