--- a/app/src/main/res/drawable/layoutshape.xml
+++ b/app/src/main/res/drawable/layoutshape.xml
@@ -4,7 +4,7 @@
         android:shape="rectangle"   >
 
     <solid
-            android:color="#EEE1CD" >
+            android:color="#1F1C1C" >
     </solid>
 
     <stroke
