--- a/app/src/main/res/drawable/newshape.xml
+++ b/app/src/main/res/drawable/newshape.xml
@@ -21,8 +21,7 @@
 
 
     <corners
-            android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp"
-    android:topLeftRadius="5dp" android:topRightRadius="5dp">
+            android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp">
     </corners>
 
 </shape>
