--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,13 @@
             android:textSize="30sp"
             android:fontFamily="serif"
             android:textStyle="bold"/>
+
+
+    <Button android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:visibility="gone"
+            android:id="@+id/internerBtn"
+            android:text="Retry"/>
 </LinearLayout>
